# schema_validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
src/schema_validator/: __init__.py  cli.py  schema.py
src/schema_validator/adapters/: spec_loader.py
src/schema_validator/domain/: schema.py  schema_modified.py
tests/: add_test.py  test_domain.py  test_schema.py
