[project]
name = "schema-validator"
version = "0.1.0"
description = "inital version of schema valdiation library"
readme = "README.md"
authors = [
    { name = "ahmed.othman", email = "ahmed.n.othman01@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]