[project]
name = "schema-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahmed.othman", email = "ahmed.n.othman01@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
